finished one successful run of language model training

--- a/bharath-lesson-4-imdb.ipynb
+++ b/bharath-lesson-4-imdb.ipynb
@@ -42,7 +42,18 @@
    "source": [
     "## 2. Download the data\n",
     "\n",
-    "This data is laid out in Imagenet style. There are separate train and test folders. There is also a folder `unsup` with unlabelled data which can be used for the language modelling part (but not the actual text classification / sentiment analysis)"
+    "This data is laid out in Imagenet style. There are separate train and test folders. There is also a folder `unsup` with unlabelled data which can be used for the language modelling part (but not the actual text classification / sentiment analysis). The README of this dataset is very interesting.\n",
+    "\n",
+    "* training set has 12.5k positive and 12.5k negative reviews\n",
+    "  * do they need to be equal? are they really equal in the real world? does it make a difference?\n",
+    "* the rating of the movie associated with a particular review is also given\n",
+    "  * not sure why, is this extra information? the neg/pos class label was sufficient for training.\n",
+    "* any particular movie has at most 30 reviews\n",
+    "  * they mention that no new information can be gained by having lots of reviews. I dont understand the stated reason fully `because reviews for the same movie tend to have correlated ratings`.\n",
+    "* movies in train and test are disjoint.\n",
+    "  * memorizing specific things about a specific movie wont help\n",
+    "* only good or bad movies are included, the neutral ones are not.\n",
+    "  * but in the unsupervised set all movies are included"
    ]
   },
   {
@@ -138,7 +149,14 @@
     "* humans eat anything that\n",
     "* moves and does not\n",
     "* move the tiger is\n",
-    "* a dangerous animal"
+    "* a dangerous animal\n",
+    "\n",
+    "The corresponding expected output that is fed to train the LSTM based network will be:\n",
+    "* elephant is vegan humans\n",
+    "* eat anything that movies\n",
+    "* and does not move\n",
+    "* the tiger is a\n",
+    "* dangerous animal END"
    ]
   },
   {
@@ -298,6 +316,8 @@
    "metadata": {},
    "source": [
     "## 5. Create the neural network to learn the language model\n",
+    "Transfer learning is used to allow the movie review based language model to be learnt more easily and quickly. The base weights come from AWD_LSTM trained on a cleaned up version of wikipedia pages called WikiText-103. \n",
+    "\n",
     "* The input data bunch is provided\n",
     "* `AWD_LSTM` is a recurrent network with an embedding layer followed by three LSTM layers (with dropouts).\n",
     "* `drop_mult` - is unclear, seems to be some kind of a common multiplier for all dropout `p` values. So if you ask for 0.4 value of `p` (so that 40% neurons are dropped every training step), then the effective `p` becomes `0.12` thus ensuring not much dropout happens. This is again some Jeremy Howard magic.\n",
@@ -307,7 +327,10 @@
     "* `AWD` stands for `ASGD Weight Dropped`. Basically dropout layers are intelligently used even in the recurrent network to provide regularization.\n",
     "* `ASGD` stands for `Average SGD`. Actually the variant proposed in the paper is called `NT-ASGD` probably for `non-monotonic trigger`\n",
     "* fast.ai does not seem to use ASGD or NT-ASGD as the paper advises. \n",
-    "* great resource for understanding the paper https://yashuseth.blog/2018/09/12/awd-lstm-explanation-understanding-language-model/"
+    "* great resource for understanding the paper https://yashuseth.blog/2018/09/12/awd-lstm-explanation-understanding-language-model/\n",
+    "\n",
+    "Great quote from Jeremy Howard\n",
+    "> So getting really good at training language models is a great way to teach a neural-net a lot about what is our world, what's in our world, how do things work in our world. It's a really fascinating topic"
    ]
   },
   {
@@ -483,30 +506,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='0' class='' max='1', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      0.00% [0/1 00:00<00:00]\n",
-       "    </div>\n",
-       "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: left;\">\n",
@@ -518,26 +523,15 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4.168975</td>\n",
+       "      <td>4.028216</td>\n",
+       "      <td>0.295077</td>\n",
+       "      <td>49:49</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
-       "</table><p>\n",
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='648' class='' max='8038', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      8.06% [648/8038 03:46<43:00 4.2797]\n",
-       "    </div>\n",
-       "    "
+       "</table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -553,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
